--- a/app/src/main/res/layout/fragment_application_success_dialog.xml
+++ b/app/src/main/res/layout/fragment_application_success_dialog.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="24dp"
+    android:layout_margin="60dp"
     app:cardCornerRadius="16dp"
     app:cardElevation="8dp"
     app:cardBackgroundColor="@android:color/white">
@@ -12,42 +12,47 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="24dp"
+        android:padding="20dp"
         android:gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Application Received"
-            android:textSize="22sp"
+            android:fontFamily="@font/dongle"
+            android:textSize="40sp"
             android:textStyle="bold"
             android:textColor="#000000"
-            android:layout_marginBottom="24dp"/>
+            android:layout_marginBottom="16dp"/>
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:src="@drawable/ic_check_circle_green"
-            android:layout_marginBottom="24dp"/>
+            android:layout_marginBottom="16dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="We will notify you when your donation is ready. You may use your QR code to claim it."
+            android:fontFamily="@font/dongle"
             android:gravity="center"
-            android:textSize="16sp"
+            android:textSize="20sp"
             android:textColor="#555555"
-            android:layout_marginBottom="32dp"/>
+            android:layout_marginBottom="24dp"/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSuccessConfirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Confirm"
+            android:fontFamily="@font/dongle"
             android:textAllCaps="false"
-            android:textSize="16sp"
+            android:textSize="24sp"
             android:backgroundTint="#008080"
+            app:cardCornerRadius="5dp"
             android:textColor="#FFFFFF"/>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
