--- a/app/src/main/res/layout/fragment_sign_up_step2_household.xml
+++ b/app/src/main/res/layout/fragment_sign_up_step2_household.xml
@@ -97,7 +97,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:fontFamily="@font/dongle"
-                    android:text="@string/household_number"
+                    android:text="Number of Family Members"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -113,7 +113,7 @@
                     android:drawableStart="@drawable/ic_person_placeholder"
                     android:drawablePadding="12dp"
                     android:fontFamily="@font/dongle"
-                    android:hint="Ex. 5"
+                    android:hint="Ex. 4"
                     android:inputType="number"
                     android:paddingStart="16dp"
                     android:paddingEnd="16dp"
@@ -121,7 +121,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/lbl_house_num" />
-
                 <TextView
                     android:id="@+id/helper_house_num"
                     android:layout_width="wrap_content"
