--- a/app/src/main/res/layout/fragment_sign_up_step3_location.xml
+++ b/app/src/main/res/layout/fragment_sign_up_step3_location.xml
@@ -94,11 +94,12 @@
                     app:layout_constraintTop_toBottomOf="@id/divider" />
 
                 <TextView
-                    android:id="@+id/lbl_prov"
+                    android:id="@+id/lbl_house_no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
                     android:fontFamily="@font/dongle"
-                    android:text="@string/province"
+                    android:text="House / Block / Lot Number"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -106,7 +107,36 @@
                     app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />
 
                 <EditText
-                    android:id="@+id/et_prov"
+                    android:id="@+id/et_house_no"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/bg_input_field"
+                    android:drawableStart="@drawable/ic_home_placeholder"
+                    android:drawablePadding="12dp"
+                    android:fontFamily="@font/dongle"
+                    android:hint="Ex. Lot 5 Blk 2"
+                    android:paddingStart="16dp"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_house_no" />
+
+                <TextView
+                    android:id="@+id/lbl_street"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/dongle"
+                    android:text="@string/street"
+                    android:textColor="#444444"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/et_house_no" />
+
+                <EditText
+                    android:id="@+id/et_street"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="8dp"
@@ -114,12 +144,41 @@
                     android:drawableStart="@drawable/ic_location_on"
                     android:drawablePadding="12dp"
                     android:fontFamily="@font/dongle"
-                    android:hint="Ex. Metro Manila"
+                    android:hint="Ex. Emerald St."
                     android:paddingStart="16dp"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/lbl_prov" />
+                    app:layout_constraintTop_toBottomOf="@id/lbl_street" />
+
+                <TextView
+                    android:id="@+id/lbl_brgy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/dongle"
+                    android:text="@string/barangay"
+                    android:textColor="#444444"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/et_street" />
+
+                <EditText
+                    android:id="@+id/et_brgy"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/bg_input_field"
+                    android:drawableStart="@drawable/ic_location_on"
+                    android:drawablePadding="12dp"
+                    android:fontFamily="@font/dongle"
+                    android:hint="Ex. Sta. Lucia"
+                    android:paddingStart="16dp"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_brgy" />
 
                 <TextView
                     android:id="@+id/lbl_city"
@@ -132,7 +191,7 @@
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/et_prov" />
+                    app:layout_constraintTop_toBottomOf="@id/et_brgy" />
 
                 <EditText
                     android:id="@+id/et_city"
@@ -151,12 +210,12 @@
                     app:layout_constraintTop_toBottomOf="@id/lbl_city" />
 
                 <TextView
-                    android:id="@+id/lbl_brgy"
+                    android:id="@+id/lbl_prov"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/dongle"
-                    android:text="@string/barangay"
+                    android:text="@string/province"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -164,7 +223,7 @@
                     app:layout_constraintTop_toBottomOf="@id/et_city" />
 
                 <EditText
-                    android:id="@+id/et_brgy"
+                    android:id="@+id/et_prov"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="8dp"
@@ -172,41 +231,42 @@
                     android:drawableStart="@drawable/ic_location_on"
                     android:drawablePadding="12dp"
                     android:fontFamily="@font/dongle"
-                    android:hint="Ex. Brgy. 123"
+                    android:hint="Ex. Metro Manila"
                     android:paddingStart="16dp"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/lbl_brgy" />
+                    app:layout_constraintTop_toBottomOf="@id/lbl_prov" />
 
                 <TextView
-                    android:id="@+id/lbl_street"
+                    android:id="@+id/lbl_zip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/dongle"
-                    android:text="@string/street"
+                    android:text="Zip Code"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/et_brgy" />
+                    app:layout_constraintTop_toBottomOf="@id/et_prov" />
 
                 <EditText
-                    android:id="@+id/et_street"
+                    android:id="@+id/et_zip"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/bg_input_field"
-                    android:drawableStart="@drawable/ic_home_placeholder"
+                    android:drawableStart="@drawable/ic_location_on"
                     android:drawablePadding="12dp"
                     android:fontFamily="@font/dongle"
-                    android:hint="Ex. Maligaya Street"
+                    android:hint="Ex. 1117"
+                    android:inputType="number"
                     android:paddingStart="16dp"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/lbl_street" />
+                    app:layout_constraintTop_toBottomOf="@id/lbl_zip" />
 
                 <ImageView
                     android:id="@+id/progress_dots"
@@ -220,7 +280,7 @@
                     app:layout_constraintBottom_toTopOf="@id/nav_container"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/et_street" />
+                    app:layout_constraintTop_toBottomOf="@id/et_zip" />
 
                 <LinearLayout
                     android:id="@+id/nav_container"
@@ -249,7 +309,7 @@
                         android:layout_width="130dp"
                         android:layout_height="wrap_content"
                         android:backgroundTint="#27859A"
-                        android:text="@string/next1"
+                        android:text="Submit"
                         android:textColor="@color/white"
                         app:cornerRadius="6dp" />
                 </LinearLayout>
